Semester_05/Formal_Languages_and_Compiler_Design/Labs/flcd-lab-2025-cristicretu/lab6/syntaxParser.cpp

// Generated from syntax.g4 by ANTLR 4.13.2


#include "syntaxListener.h"

#include "syntaxParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SyntaxParserStaticData final {
  SyntaxParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SyntaxParserStaticData(const SyntaxParserStaticData&) = delete;
  SyntaxParserStaticData(SyntaxParserStaticData&&) = delete;
  SyntaxParserStaticData& operator=(const SyntaxParserStaticData&) = delete;
  SyntaxParserStaticData& operator=(SyntaxParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag syntaxParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<SyntaxParserStaticData> syntaxParserStaticData = nullptr;

void syntaxParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (syntaxParserStaticData != nullptr) {
    return;
  }
#else
  assert(syntaxParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SyntaxParserStaticData>(
    std::vector<std::string>{
      "program", "statementList", "statement", "declStmt", "inputStmt", 
      "outputStmt", "ifStmt", "elseBlock", "forStmt", "funcDefStmt", "returnStmt", 
      "exprStmt", "block", "parameterList", "expressionList", "condition", 
      "comparison", "expression", "term", "factor", "postfixOp", "primary", 
      "functionCall", "vector", "arrayAccess", "comparisonOp", "logicalOp"
    },
    std::vector<std::string>{
      "", "'program'", "'end'", "'let'", "'read'", "'say'", "'if'", "'else'", 
      "'for'", "'fn'", "'return'", "'<.>'", "'//'", "'^^'", "'%%'", "'@@'", 
      "'=='", "'!='", "'>='", "'<='", "'|>'", "'+'", "'-'", "'*'", "'/'", 
      "'%'", "'>'", "'<'", "'&'", "'|'", "'^'", "'!'", "'~'", "'='", "'('", 
      "')'", "'{'", "'}'", "'['", "']'", "';'", "','"
    },
    std::vector<std::string>{
      "", "PROGRAM", "END", "LET", "READ", "SAY", "IF", "ELSE", "FOR", "FN", 
      "RETURN", "DOT", "FLOORDIV", "GCD", "LCM", "POWER", "EQ", "NEQ", "GTE", 
      "LTE", "RELU", "PLUS", "MINUS", "MULT", "DIV", "MOD", "GT", "LT", 
      "AND", "OR", "XOR", "FACTORIAL", "SIGMOID", "ASSIGN", "LPAREN", "RPAREN", 
      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "SEMI", "COMMA", "NUMBER", 
      "STRING", "IDENTIFIER", "COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  syntaxParserStaticData = std::move(staticData);
}

}

syntaxParser::syntaxParser(TokenStream *input) : syntaxParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

syntaxParser::syntaxParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  syntaxParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *syntaxParserStaticData->atn, syntaxParserStaticData->decisionToDFA, syntaxParserStaticData->sharedContextCache, options);
}

syntaxParser::~syntaxParser() {
  delete _interpreter;
}

const atn::ATN& syntaxParser::getATN() const {
  return *syntaxParserStaticData->atn;
}

std::string syntaxParser::getGrammarFileName() const {
  return "syntax.g4";
}

const std::vector<std::string>& syntaxParser::getRuleNames() const {
  return syntaxParserStaticData->ruleNames;
}

const dfa::Vocabulary& syntaxParser::getVocabulary() const {
  return syntaxParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView syntaxParser::getSerializedATN() const {
  return syntaxParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

syntaxParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* syntaxParser::ProgramContext::PROGRAM() {
  return getToken(syntaxParser::PROGRAM, 0);
}

syntaxParser::StatementListContext* syntaxParser::ProgramContext::statementList() {
  return getRuleContext<syntaxParser::StatementListContext>(0);
}

tree::TerminalNode* syntaxParser::ProgramContext::END() {
  return getToken(syntaxParser::END, 0);
}

tree::TerminalNode* syntaxParser::ProgramContext::EOF() {
  return getToken(syntaxParser::EOF, 0);
}


size_t syntaxParser::ProgramContext::getRuleIndex() const {
  return syntaxParser::RuleProgram;
}

void syntaxParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void syntaxParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

syntaxParser::ProgramContext* syntaxParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, syntaxParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(syntaxParser::PROGRAM);
    setState(55);
    statementList();
    setState(56);
    match(syntaxParser::END);
    setState(57);
    match(syntaxParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementListContext ------------------------------------------------------------------

syntaxParser::StatementListContext::StatementListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<syntaxParser::StatementContext *> syntaxParser::StatementListContext::statement() {
  return getRuleContexts<syntaxParser::StatementContext>();
}

syntaxParser::StatementContext* syntaxParser::StatementListContext::statement(size_t i) {
  return getRuleContext<syntaxParser::StatementContext>(i);
}


size_t syntaxParser::StatementListContext::getRuleIndex() const {
  return syntaxParser::RuleStatementList;
}

void syntaxParser::StatementListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatementList(this);
}

void syntaxParser::StatementListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatementList(this);
}

syntaxParser::StatementListContext* syntaxParser::statementList() {
  StatementListContext *_localctx = _tracker.createInstance<StatementListContext>(_ctx, getState());
  enterRule(_localctx, 2, syntaxParser::RuleStatementList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 31078387550072) != 0)) {
      setState(59);
      statement();
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

syntaxParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

syntaxParser::DeclStmtContext* syntaxParser::StatementContext::declStmt() {
  return getRuleContext<syntaxParser::DeclStmtContext>(0);
}

syntaxParser::InputStmtContext* syntaxParser::StatementContext::inputStmt() {
  return getRuleContext<syntaxParser::InputStmtContext>(0);
}

syntaxParser::OutputStmtContext* syntaxParser::StatementContext::outputStmt() {
  return getRuleContext<syntaxParser::OutputStmtContext>(0);
}

syntaxParser::IfStmtContext* syntaxParser::StatementContext::ifStmt() {
  return getRuleContext<syntaxParser::IfStmtContext>(0);
}

syntaxParser::ForStmtContext* syntaxParser::StatementContext::forStmt() {
  return getRuleContext<syntaxParser::ForStmtContext>(0);
}

syntaxParser::FuncDefStmtContext* syntaxParser::StatementContext::funcDefStmt() {
  return getRuleContext<syntaxParser::FuncDefStmtContext>(0);
}

syntaxParser::ReturnStmtContext* syntaxParser::StatementContext::returnStmt() {
  return getRuleContext<syntaxParser::ReturnStmtContext>(0);
}

syntaxParser::ExprStmtContext* syntaxParser::StatementContext::exprStmt() {
  return getRuleContext<syntaxParser::ExprStmtContext>(0);
}


size_t syntaxParser::StatementContext::getRuleIndex() const {
  return syntaxParser::RuleStatement;
}

void syntaxParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void syntaxParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

syntaxParser::StatementContext* syntaxParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, syntaxParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case syntaxParser::LET: {
        enterOuterAlt(_localctx, 1);
        setState(65);
        declStmt();
        break;
      }

      case syntaxParser::READ: {
        enterOuterAlt(_localctx, 2);
        setState(66);
        inputStmt();
        break;
      }

      case syntaxParser::SAY: {
        enterOuterAlt(_localctx, 3);
        setState(67);
        outputStmt();
        break;
      }

      case syntaxParser::IF: {
        enterOuterAlt(_localctx, 4);
        setState(68);
        ifStmt();
        break;
      }

      case syntaxParser::FOR: {
        enterOuterAlt(_localctx, 5);
        setState(69);
        forStmt();
        break;
      }

      case syntaxParser::FN: {
        enterOuterAlt(_localctx, 6);
        setState(70);
        funcDefStmt();
        break;
      }

      case syntaxParser::RETURN: {
        enterOuterAlt(_localctx, 7);
        setState(71);
        returnStmt();
        break;
      }

      case syntaxParser::MINUS:
      case syntaxParser::LPAREN:
      case syntaxParser::LBRACKET:
      case syntaxParser::NUMBER:
      case syntaxParser::STRING:
      case syntaxParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 8);
        setState(72);
        exprStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclStmtContext ------------------------------------------------------------------

syntaxParser::DeclStmtContext::DeclStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* syntaxParser::DeclStmtContext::LET() {
  return getToken(syntaxParser::LET, 0);
}

tree::TerminalNode* syntaxParser::DeclStmtContext::IDENTIFIER() {
  return getToken(syntaxParser::IDENTIFIER, 0);
}

tree::TerminalNode* syntaxParser::DeclStmtContext::ASSIGN() {
  return getToken(syntaxParser::ASSIGN, 0);
}

syntaxParser::ExpressionContext* syntaxParser::DeclStmtContext::expression() {
  return getRuleContext<syntaxParser::ExpressionContext>(0);
}

tree::TerminalNode* syntaxParser::DeclStmtContext::SEMI() {
  return getToken(syntaxParser::SEMI, 0);
}

syntaxParser::ArrayAccessContext* syntaxParser::DeclStmtContext::arrayAccess() {
  return getRuleContext<syntaxParser::ArrayAccessContext>(0);
}


size_t syntaxParser::DeclStmtContext::getRuleIndex() const {
  return syntaxParser::RuleDeclStmt;
}

void syntaxParser::DeclStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclStmt(this);
}

void syntaxParser::DeclStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclStmt(this);
}

syntaxParser::DeclStmtContext* syntaxParser::declStmt() {
  DeclStmtContext *_localctx = _tracker.createInstance<DeclStmtContext>(_ctx, getState());
  enterRule(_localctx, 6, syntaxParser::RuleDeclStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(87);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(75);
      match(syntaxParser::LET);
      setState(76);
      match(syntaxParser::IDENTIFIER);
      setState(77);
      match(syntaxParser::ASSIGN);
      setState(78);
      expression();
      setState(79);
      match(syntaxParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(81);
      match(syntaxParser::LET);
      setState(82);
      arrayAccess();
      setState(83);
      match(syntaxParser::ASSIGN);
      setState(84);
      expression();
      setState(85);
      match(syntaxParser::SEMI);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputStmtContext ------------------------------------------------------------------

syntaxParser::InputStmtContext::InputStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* syntaxParser::InputStmtContext::READ() {
  return getToken(syntaxParser::READ, 0);
}

tree::TerminalNode* syntaxParser::InputStmtContext::IDENTIFIER() {
  return getToken(syntaxParser::IDENTIFIER, 0);
}

tree::TerminalNode* syntaxParser::InputStmtContext::SEMI() {
  return getToken(syntaxParser::SEMI, 0);
}


size_t syntaxParser::InputStmtContext::getRuleIndex() const {
  return syntaxParser::RuleInputStmt;
}

void syntaxParser::InputStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInputStmt(this);
}

void syntaxParser::InputStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInputStmt(this);
}

syntaxParser::InputStmtContext* syntaxParser::inputStmt() {
  InputStmtContext *_localctx = _tracker.createInstance<InputStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, syntaxParser::RuleInputStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(syntaxParser::READ);
    setState(90);
    match(syntaxParser::IDENTIFIER);
    setState(91);
    match(syntaxParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutputStmtContext ------------------------------------------------------------------

syntaxParser::OutputStmtContext::OutputStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* syntaxParser::OutputStmtContext::SAY() {
  return getToken(syntaxParser::SAY, 0);
}

syntaxParser::ExpressionListContext* syntaxParser::OutputStmtContext::expressionList() {
  return getRuleContext<syntaxParser::ExpressionListContext>(0);
}

tree::TerminalNode* syntaxParser::OutputStmtContext::SEMI() {
  return getToken(syntaxParser::SEMI, 0);
}


size_t syntaxParser::OutputStmtContext::getRuleIndex() const {
  return syntaxParser::RuleOutputStmt;
}

void syntaxParser::OutputStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOutputStmt(this);
}

void syntaxParser::OutputStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOutputStmt(this);
}

syntaxParser::OutputStmtContext* syntaxParser::outputStmt() {
  OutputStmtContext *_localctx = _tracker.createInstance<OutputStmtContext>(_ctx, getState());
  enterRule(_localctx, 10, syntaxParser::RuleOutputStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(syntaxParser::SAY);
    setState(94);
    expressionList();
    setState(95);
    match(syntaxParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

syntaxParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* syntaxParser::IfStmtContext::IF() {
  return getToken(syntaxParser::IF, 0);
}

tree::TerminalNode* syntaxParser::IfStmtContext::LPAREN() {
  return getToken(syntaxParser::LPAREN, 0);
}

syntaxParser::ConditionContext* syntaxParser::IfStmtContext::condition() {
  return getRuleContext<syntaxParser::ConditionContext>(0);
}

tree::TerminalNode* syntaxParser::IfStmtContext::RPAREN() {
  return getToken(syntaxParser::RPAREN, 0);
}

syntaxParser::BlockContext* syntaxParser::IfStmtContext::block() {
  return getRuleContext<syntaxParser::BlockContext>(0);
}

syntaxParser::ElseBlockContext* syntaxParser::IfStmtContext::elseBlock() {
  return getRuleContext<syntaxParser::ElseBlockContext>(0);
}


size_t syntaxParser::IfStmtContext::getRuleIndex() const {
  return syntaxParser::RuleIfStmt;
}

void syntaxParser::IfStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStmt(this);
}

void syntaxParser::IfStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStmt(this);
}

syntaxParser::IfStmtContext* syntaxParser::ifStmt() {
  IfStmtContext *_localctx = _tracker.createInstance<IfStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, syntaxParser::RuleIfStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    match(syntaxParser::IF);
    setState(98);
    match(syntaxParser::LPAREN);
    setState(99);
    condition();
    setState(100);
    match(syntaxParser::RPAREN);
    setState(101);
    block();
    setState(103);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == syntaxParser::ELSE) {
      setState(102);
      elseBlock();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElseBlockContext ------------------------------------------------------------------

syntaxParser::ElseBlockContext::ElseBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* syntaxParser::ElseBlockContext::ELSE() {
  return getToken(syntaxParser::ELSE, 0);
}

syntaxParser::BlockContext* syntaxParser::ElseBlockContext::block() {
  return getRuleContext<syntaxParser::BlockContext>(0);
}


size_t syntaxParser::ElseBlockContext::getRuleIndex() const {
  return syntaxParser::RuleElseBlock;
}

void syntaxParser::ElseBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElseBlock(this);
}

void syntaxParser::ElseBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElseBlock(this);
}

syntaxParser::ElseBlockContext* syntaxParser::elseBlock() {
  ElseBlockContext *_localctx = _tracker.createInstance<ElseBlockContext>(_ctx, getState());
  enterRule(_localctx, 14, syntaxParser::RuleElseBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(syntaxParser::ELSE);
    setState(106);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForStmtContext ------------------------------------------------------------------

syntaxParser::ForStmtContext::ForStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* syntaxParser::ForStmtContext::FOR() {
  return getToken(syntaxParser::FOR, 0);
}

tree::TerminalNode* syntaxParser::ForStmtContext::LPAREN() {
  return getToken(syntaxParser::LPAREN, 0);
}

std::vector<tree::TerminalNode *> syntaxParser::ForStmtContext::IDENTIFIER() {
  return getTokens(syntaxParser::IDENTIFIER);
}

tree::TerminalNode* syntaxParser::ForStmtContext::IDENTIFIER(size_t i) {
  return getToken(syntaxParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> syntaxParser::ForStmtContext::ASSIGN() {
  return getTokens(syntaxParser::ASSIGN);
}

tree::TerminalNode* syntaxParser::ForStmtContext::ASSIGN(size_t i) {
  return getToken(syntaxParser::ASSIGN, i);
}

std::vector<syntaxParser::ExpressionContext *> syntaxParser::ForStmtContext::expression() {
  return getRuleContexts<syntaxParser::ExpressionContext>();
}

syntaxParser::ExpressionContext* syntaxParser::ForStmtContext::expression(size_t i) {
  return getRuleContext<syntaxParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> syntaxParser::ForStmtContext::SEMI() {
  return getTokens(syntaxParser::SEMI);
}

tree::TerminalNode* syntaxParser::ForStmtContext::SEMI(size_t i) {
  return getToken(syntaxParser::SEMI, i);
}

syntaxParser::ConditionContext* syntaxParser::ForStmtContext::condition() {
  return getRuleContext<syntaxParser::ConditionContext>(0);
}

tree::TerminalNode* syntaxParser::ForStmtContext::RPAREN() {
  return getToken(syntaxParser::RPAREN, 0);
}

syntaxParser::BlockContext* syntaxParser::ForStmtContext::block() {
  return getRuleContext<syntaxParser::BlockContext>(0);
}


size_t syntaxParser::ForStmtContext::getRuleIndex() const {
  return syntaxParser::RuleForStmt;
}

void syntaxParser::ForStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForStmt(this);
}

void syntaxParser::ForStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForStmt(this);
}

syntaxParser::ForStmtContext* syntaxParser::forStmt() {
  ForStmtContext *_localctx = _tracker.createInstance<ForStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, syntaxParser::RuleForStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(syntaxParser::FOR);
    setState(109);
    match(syntaxParser::LPAREN);
    setState(110);
    match(syntaxParser::IDENTIFIER);
    setState(111);
    match(syntaxParser::ASSIGN);
    setState(112);
    expression();
    setState(113);
    match(syntaxParser::SEMI);
    setState(114);
    condition();
    setState(115);
    match(syntaxParser::SEMI);
    setState(116);
    match(syntaxParser::IDENTIFIER);
    setState(117);
    match(syntaxParser::ASSIGN);
    setState(118);
    expression();
    setState(119);
    match(syntaxParser::RPAREN);
    setState(120);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDefStmtContext ------------------------------------------------------------------

syntaxParser::FuncDefStmtContext::FuncDefStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* syntaxParser::FuncDefStmtContext::FN() {
  return getToken(syntaxParser::FN, 0);
}

tree::TerminalNode* syntaxParser::FuncDefStmtContext::IDENTIFIER() {
  return getToken(syntaxParser::IDENTIFIER, 0);
}

tree::TerminalNode* syntaxParser::FuncDefStmtContext::LPAREN() {
  return getToken(syntaxParser::LPAREN, 0);
}

tree::TerminalNode* syntaxParser::FuncDefStmtContext::RPAREN() {
  return getToken(syntaxParser::RPAREN, 0);
}

syntaxParser::BlockContext* syntaxParser::FuncDefStmtContext::block() {
  return getRuleContext<syntaxParser::BlockContext>(0);
}

syntaxParser::ParameterListContext* syntaxParser::FuncDefStmtContext::parameterList() {
  return getRuleContext<syntaxParser::ParameterListContext>(0);
}


size_t syntaxParser::FuncDefStmtContext::getRuleIndex() const {
  return syntaxParser::RuleFuncDefStmt;
}

void syntaxParser::FuncDefStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncDefStmt(this);
}

void syntaxParser::FuncDefStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<syntaxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncDefStmt(this);
}

syntaxParser::FuncDefStmtContext* syntaxParser::funcDefStmt() {
  FuncDefStmtContext *_localctx = _tracker.createInstance<FuncDefStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, syntaxParser::RuleFuncDefStmt);
  size_t _la = 0;
